tests/cases/scc/error/0023-include.c
//!necc-dbg @ -as

#include "0023-include.h"
